# django-databruce

./: .coveragerc  .gitignore  README.md  TO_DO.md  bruce api planning.txt  changelog.md  gunicorn.conf.py  kill.sh  main.py  manage.py  models_file.py  oldcss.txt  plan for new attempt.txt  pyproject.toml  requirements.txt  ruff.toml  test_runner.py
.github/workflows/: main.yml
admin/: .env  asgi.py  local_settings.py  prod_settings.py  settings.py  urls.py  wsgi.py
api/: filters.py  permissions.py  selectors.py  serializers.py  urls.py  views.py
blog/: urls.py  views.py
databruce/: admin.py  apps.py  asgi.py  celery.py  context_processors.py  filters.py  forms.py  middleware.py  models.py  pagination.py  prod_settings.py  settings.py  sitemap.py  tables.py  tests.py  urls.py  views.py  wsgi.py
databruce/config/: base.py  local.py  prod.py  test.py
databruce/migrations/: 0001_initial.py  0002_alter_events_options_alter_songspage_options.py  0002_events_uuid_alter_bands_name_alter_events_event_id_and_more.py  0002_siteupdates_songspagenew.py  0003_tourcounts_alter_setlists_options.py  0003_updates_delete_songsfirstrelease.py  0004_onstagebandmembers.py
databruce/static/admin/css/: custom_unfold.css
databruce/static/admin/js/: custom_unfold.js
databruce/static/databruce/: style.css  test.css
databruce/static/databruce/css/: colors.css  colors.min.css  datatables.css  datatables.min.css  fonts.css  hb_colors.css  hb_select2.css  hb_style.css  new.css  new_style.css  old_style.consolidated.css  old_style.css  select2.css  select2.min.css  style.consolidated.css  style.css  style.min.css
databruce/static/databruce/js/: advanced_search.js  category_select.js  datatables.js  datatables.min.js  dt_tab_reload.js  select2-dropdown.js  setlist_search.js  theme-toggler.js
databruce/templates/: 404.html  500.html  500.html.bak  robots.txt
databruce/templates/admin/: custom_fieldset.html  custom_stacked.html  submit-line.html
databruce/templates/blog/: blog.html  categories.html  post_detail.html  post_partial.html  posts_by_category.html  posts_by_tag.html  tags.html
databruce/templates/databruce/: about.html  base.html  calendar.html  category.html  contact.html  event_info.html  event_mobile.html  index.html  links.html  narrow_layout.html  roadmap.html  test.html  updates.html  wide_layout.html
databruce/templates/databruce/bands/: band_details.html  bands.html  (+1 more)
databruce/templates/users/: base.html  change_password.html  change_password_done.html  login.html  logout.html  profile.html  reset_password.html  reset_password_complete.html  reset_password_confirm.html  reset_password_confirm_subject.txt  reset_password_done.html  reset_password_email.html  settings.html  signup.html  signup_confirm_subject.txt  signup_done.html  signup_email.html  users.html
databruce/templatetags/: filters.py  search_filters.py
static/CACHE/: manifest.json
static/CACHE/css/: output.ace428c29a86.css
static/databruce/css/: colors.css  datatables.css  preflight.css  select2.css  style.css
static/databruce/img/: site.webmanifest
static/databruce/js/: advanced_search.js  category_select.js  datatables.js  dt_tab_reload.js  searchBuilder.js  select2-dropdown.js  setlist_search.js  theme-toggler.js
(+62 files in other folders)
