[project]
name = "django-databruce"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.9",
    "django-browser-reload>=1.20.0",
    "django-debug-toolbar==5.1.0",
    "django-filter==25.2",
    "django-link-shortener>=1.0.1",
    "djangorestframework==3.16.1",
    "djangorestframework-datatables==0.7.2",
    "djlint>=1.36.4",
    "markdown==3.7",
    "markdown-it-py>=4.0.0",
    "psycopg[binary,pool]",
    "python-dotenv==1.1.0",
    "python-slugify>=8.0.4",
    "querystring-parser>=1.2.4",
    "requests>=2.32.4",
]
