[project]
name = "django-databruce"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.2",
    "django-anymail[mailgun]>=14.0",
    "django-autocomplete-light>=3.12.1",
    "django-browser-reload>=1.20.0",
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-link-shortener>=1.0.1",
    "django-unfold>=0.77.1",
    "django-unfold-markdown>=0.1.2",
    "djangorestframework>=3.16.1",
    "djlint>=1.36.4",
    "gevent>=25.9.1",
    "gunicorn>=25.0.0",
    "iommi>=7.22.1",
    "markdown>=3.7",
    "markdown-it-py>=4.0.0",
    "nh3>=0.3.4",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0.4",
    "querystring-parser>=1.2.4",
    "requests>=2.32.4",
    "sentry-sdk>=2.54.0",
]

[dependency-groups]
dev = ["ty>=0.0.2"]

[tool.ty.rules]
non-subscriptable = "ignore"
possibly-missing-attribute = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
unresolved-import = "ignore"
